--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 <html>
   <body>
-    padding:0;
-    margin:0;
+    <padding:0>
+    <margin:0>
     <img src="{{ url_for('video_feed') }}">
+    </margin:0>
+    </padding:0>
   </body>
 </html>
