--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,15 @@
 <html>
+  <style type="text/css">
+<!--
+body {
+ margin-top: 0px;
+ margin-right: 0px;
+ margin-bottom: 0px;
+ margin-left: 0px
+}
+-->
+</style>
   <body>
-    <padding:0>
-    <margin:0>
     <img src="{{ url_for('video_feed') }}">
-    </margin:0>
-    </padding:0>
   </body>
 </html>
