--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,12 @@
 <html>
+  <style type="text/css">
+<!--
+body {
+ margin-top: 0px;
+ margin-left: 0px
+}
+-->
+</style>
   <body>
     <img src="{{ url_for('video_feed') }}">
   </body>
